parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN E
  10            | ID ASSIGN E
  11            | ID ASSIGN when_clauses
  12            | cell ASSIGN when_clauses
  13            | IF condition THEN opt_statements else_clause END

  14  when_clauses : E OTHERWISE
  15               | E WHEN condition COMMA when_clauses

  16  else_clause :
  17              | ELSIF condition THEN opt_statements else_clause
  18              | ELSE opt_statements

  19  condition : E EQUAL E
  20            | E DIFF E
  21            | E INF E
  22            | E INFEQ E
  23            | E SUP E
  24            | E SUPEQ E

  25  cell : LBRACKET INT COMMA INT RBRACKET

  26  E : E PLUS T
  27    | E MINUS T
  28    | T

  29  T : T TIMES F
  30    | T DIVIS F
  31    | T MOD F
  32    | F

  33  F : cell
  34    | INT
  35    | ID
  36    | LPAREN E RPAREN
  37    | MINUS F
  38    | PLUS F

  39  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (39)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (39)

	.  reduce 39


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 7

	opt_statements  goto 21
	statement  goto 22
	cell  goto 23


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 24


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 25
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (25)

	INT  shift 26
	.  error


state 19
	statement : IF . condition THEN opt_statements else_clause END  (13)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 33
	condition  goto 34
	T  goto 35
	F  goto 36


state 20
	statement : ID . ASSIGN E  (10)
	statement : ID . ASSIGN when_clauses  (11)

	ASSIGN  shift 37
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 38
	.  error


state 22
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 7
	END  reduce 7
	ELSIF  reduce 7
	ELSE  reduce 7

	opt_statements  goto 39
	statement  goto 22
	cell  goto 23


state 23
	statement : cell . ASSIGN E  (9)
	statement : cell . ASSIGN when_clauses  (12)

	ASSIGN  shift 40
	.  error


state 24
	fields : fields COMMA field .  (5)

	.  reduce 5


state 25
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 41
	.  error


state 26
	cell : LBRACKET INT . COMMA INT RBRACKET  (25)

	COMMA  shift 42
	.  error


state 27
	F : PLUS . F  (38)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	F  goto 43


state 28
	F : MINUS . F  (37)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	F  goto 44


state 29
	F : LPAREN . E RPAREN  (36)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 45
	T  goto 35
	F  goto 36


state 30
	F : ID .  (35)

	.  reduce 35


state 31
	F : INT .  (34)

	.  reduce 34


state 32
	F : cell .  (33)

	.  reduce 33


state 33
	condition : E . EQUAL E  (19)
	condition : E . DIFF E  (20)
	condition : E . INF E  (21)
	condition : E . INFEQ E  (22)
	condition : E . SUP E  (23)
	condition : E . SUPEQ E  (24)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	EQUAL  shift 48
	DIFF  shift 49
	INF  shift 50
	INFEQ  shift 51
	SUP  shift 52
	SUPEQ  shift 53
	.  error


state 34
	statement : IF condition . THEN opt_statements else_clause END  (13)

	THEN  shift 54
	.  error


state 35
	E : T .  (28)
	T : T . TIMES F  (29)
	T : T . DIVIS F  (30)
	T : T . MOD F  (31)

	TIMES  shift 55
	DIVIS  shift 56
	MOD  shift 57
	EOF  reduce 28
	END  reduce 28
	COMMA  reduce 28
	LBRACKET  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	RPAREN  reduce 28
	IF  reduce 28
	ELSIF  reduce 28
	THEN  reduce 28
	WHEN  reduce 28
	OTHERWISE  reduce 28
	EQUAL  reduce 28
	DIFF  reduce 28
	INF  reduce 28
	INFEQ  reduce 28
	SUP  reduce 28
	SUPEQ  reduce 28
	ELSE  reduce 28
	ID  reduce 28


state 36
	T : F .  (32)

	.  reduce 32


state 37
	statement : ID ASSIGN . E  (10)
	statement : ID ASSIGN . when_clauses  (11)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 58
	when_clauses  goto 59
	T  goto 35
	F  goto 36


state 38
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 39
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 40
	statement : cell ASSIGN . E  (9)
	statement : cell ASSIGN . when_clauses  (12)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 60
	when_clauses  goto 61
	T  goto 35
	F  goto 36


state 41
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 42
	cell : LBRACKET INT COMMA . INT RBRACKET  (25)

	INT  shift 62
	.  error


state 43
	F : PLUS F .  (38)

	.  reduce 38


state 44
	F : MINUS F .  (37)

	.  reduce 37


state 45
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)
	F : LPAREN E . RPAREN  (36)

	PLUS  shift 46
	MINUS  shift 47
	RPAREN  shift 63
	.  error


state 46
	E : E PLUS . T  (26)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	T  goto 64
	F  goto 36


state 47
	E : E MINUS . T  (27)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	T  goto 65
	F  goto 36


state 48
	condition : E EQUAL . E  (19)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 66
	T  goto 35
	F  goto 36


state 49
	condition : E DIFF . E  (20)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 67
	T  goto 35
	F  goto 36


state 50
	condition : E INF . E  (21)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 68
	T  goto 35
	F  goto 36


state 51
	condition : E INFEQ . E  (22)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 69
	T  goto 35
	F  goto 36


state 52
	condition : E SUP . E  (23)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 70
	T  goto 35
	F  goto 36


state 53
	condition : E SUPEQ . E  (24)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 71
	T  goto 35
	F  goto 36


state 54
	statement : IF condition THEN . opt_statements else_clause END  (13)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	END  reduce 7
	ELSIF  reduce 7
	ELSE  reduce 7

	opt_statements  goto 72
	statement  goto 22
	cell  goto 23


state 55
	T : T TIMES . F  (29)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	F  goto 73


state 56
	T : T DIVIS . F  (30)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	F  goto 74


state 57
	T : T MOD . F  (31)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	F  goto 75


state 58
	statement : ID ASSIGN E .  (10)
	when_clauses : E . OTHERWISE  (14)
	when_clauses : E . WHEN condition COMMA when_clauses  (15)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	WHEN  shift 76
	OTHERWISE  shift 77
	EOF  reduce 10
	END  reduce 10
	LBRACKET  reduce 10
	IF  reduce 10
	ELSIF  reduce 10
	ELSE  reduce 10
	ID  reduce 10


state 59
	statement : ID ASSIGN when_clauses .  (11)

	.  reduce 11


state 60
	statement : cell ASSIGN E .  (9)
	when_clauses : E . OTHERWISE  (14)
	when_clauses : E . WHEN condition COMMA when_clauses  (15)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	WHEN  shift 76
	OTHERWISE  shift 77
	EOF  reduce 9
	END  reduce 9
	LBRACKET  reduce 9
	IF  reduce 9
	ELSIF  reduce 9
	ELSE  reduce 9
	ID  reduce 9


state 61
	statement : cell ASSIGN when_clauses .  (12)

	.  reduce 12


state 62
	cell : LBRACKET INT COMMA INT . RBRACKET  (25)

	RBRACKET  shift 78
	.  error


state 63
	F : LPAREN E RPAREN .  (36)

	.  reduce 36


state 64
	E : E PLUS T .  (26)
	T : T . TIMES F  (29)
	T : T . DIVIS F  (30)
	T : T . MOD F  (31)

	TIMES  shift 55
	DIVIS  shift 56
	MOD  shift 57
	EOF  reduce 26
	END  reduce 26
	COMMA  reduce 26
	LBRACKET  reduce 26
	PLUS  reduce 26
	MINUS  reduce 26
	RPAREN  reduce 26
	IF  reduce 26
	ELSIF  reduce 26
	THEN  reduce 26
	WHEN  reduce 26
	OTHERWISE  reduce 26
	EQUAL  reduce 26
	DIFF  reduce 26
	INF  reduce 26
	INFEQ  reduce 26
	SUP  reduce 26
	SUPEQ  reduce 26
	ELSE  reduce 26
	ID  reduce 26


state 65
	E : E MINUS T .  (27)
	T : T . TIMES F  (29)
	T : T . DIVIS F  (30)
	T : T . MOD F  (31)

	TIMES  shift 55
	DIVIS  shift 56
	MOD  shift 57
	EOF  reduce 27
	END  reduce 27
	COMMA  reduce 27
	LBRACKET  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	RPAREN  reduce 27
	IF  reduce 27
	ELSIF  reduce 27
	THEN  reduce 27
	WHEN  reduce 27
	OTHERWISE  reduce 27
	EQUAL  reduce 27
	DIFF  reduce 27
	INF  reduce 27
	INFEQ  reduce 27
	SUP  reduce 27
	SUPEQ  reduce 27
	ELSE  reduce 27
	ID  reduce 27


state 66
	condition : E EQUAL E .  (19)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 19
	THEN  reduce 19


state 67
	condition : E DIFF E .  (20)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 20
	THEN  reduce 20


state 68
	condition : E INF E .  (21)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 21
	THEN  reduce 21


state 69
	condition : E INFEQ E .  (22)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 22
	THEN  reduce 22


state 70
	condition : E SUP E .  (23)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 23
	THEN  reduce 23


state 71
	condition : E SUPEQ E .  (24)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	COMMA  reduce 24
	THEN  reduce 24


state 72
	statement : IF condition THEN opt_statements . else_clause END  (13)
	else_clause : .  (16)

	ELSIF  shift 79
	ELSE  shift 80
	END  reduce 16

	else_clause  goto 81


state 73
	T : T TIMES F .  (29)

	.  reduce 29


state 74
	T : T DIVIS F .  (30)

	.  reduce 30


state 75
	T : T MOD F .  (31)

	.  reduce 31


state 76
	when_clauses : E WHEN . condition COMMA when_clauses  (15)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 33
	condition  goto 82
	T  goto 35
	F  goto 36


state 77
	when_clauses : E OTHERWISE .  (14)

	.  reduce 14


state 78
	cell : LBRACKET INT COMMA INT RBRACKET .  (25)

	.  reduce 25


state 79
	else_clause : ELSIF . condition THEN opt_statements else_clause  (17)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 33
	condition  goto 83
	T  goto 35
	F  goto 36


state 80
	else_clause : ELSE . opt_statements  (18)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	END  reduce 7

	opt_statements  goto 84
	statement  goto 22
	cell  goto 23


state 81
	statement : IF condition THEN opt_statements else_clause . END  (13)

	END  shift 85
	.  error


state 82
	when_clauses : E WHEN condition . COMMA when_clauses  (15)

	COMMA  shift 86
	.  error


state 83
	else_clause : ELSIF condition . THEN opt_statements else_clause  (17)

	THEN  shift 87
	.  error


state 84
	else_clause : ELSE opt_statements .  (18)

	.  reduce 18


state 85
	statement : IF condition THEN opt_statements else_clause END .  (13)

	.  reduce 13


state 86
	when_clauses : E WHEN condition COMMA . when_clauses  (15)

	LBRACKET  shift 18
	PLUS  shift 27
	MINUS  shift 28
	LPAREN  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	E  goto 88
	when_clauses  goto 89
	T  goto 35
	F  goto 36


state 87
	else_clause : ELSIF condition THEN . opt_statements else_clause  (17)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	END  reduce 7
	ELSIF  reduce 7
	ELSE  reduce 7

	opt_statements  goto 90
	statement  goto 22
	cell  goto 23


state 88
	when_clauses : E . OTHERWISE  (14)
	when_clauses : E . WHEN condition COMMA when_clauses  (15)
	E : E . PLUS T  (26)
	E : E . MINUS T  (27)

	PLUS  shift 46
	MINUS  shift 47
	WHEN  shift 76
	OTHERWISE  shift 77
	.  error


state 89
	when_clauses : E WHEN condition COMMA when_clauses .  (15)

	.  reduce 15


state 90
	else_clause : ELSIF condition THEN opt_statements . else_clause  (17)
	else_clause : .  (16)

	ELSIF  shift 79
	ELSE  shift 80
	END  reduce 16

	else_clause  goto 91


state 91
	else_clause : ELSIF condition THEN opt_statements else_clause .  (17)

	.  reduce 17


34 terminals, 15 nonterminals
40 grammar rules, 92 states
